fixed auth & login page css

--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="cinema-detail/cinema.css"/>
     <link rel="stylesheet" href="movie-detail/movie.css"/>
     <link rel="stylesheet" href="menu/menu.css"/>
+    <link rel="stylesheet" href="login/login.css"/>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
@@ -43,9 +44,6 @@
     <script src="movie-detail/movie-detail.component.js"></script>
 
     <script src="menu/menu.component.js"></script>
-
-    <script src="auth-form/auth-form.module.js"></script>
-    <script src="auth-form/auth-form.component.js"></script>
 
     <script src="login/login.module.js"></script>
     <script src="login/login.component.js"></script>
