--- a/app/login/login.template.html
+++ b/app/login/login.template.html
@@ -1,15 +1,18 @@
 <form ng-submit="submitLoginForm()">
-    <ul>
+    <ul id="login_ul">
         <li>
-            <label for="username"><b>Username</b></label>
-            <input type="text" placeholder="Enter username" id="username" ng-model="username" required>
+            <div id="username_header">Username</div>
+            <label for="username"></label><input type="text" placeholder="Enter username" id="username"
+                                                 ng-model="username" required>
         </li>
         <li>
-            <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter password" id="password" ng-model="password" required>
+            <div id="password_header">Password</div>
+            <label for="password"></label><input type="password" placeholder="Enter password" id="password"
+                                                 ng-model="password" required>
         </li>
         <li>
-            <button type="submit">Login</button>
+            <button type="submit" id="login_button">Login</button>
         </li>
     </ul>
 </form>
+<a href="#!/signup" id="signup">Sign up</a>
