--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="movie-detail/movie.css"/>
     <link rel="stylesheet" href="menu/menu.css"/>
     <link rel="stylesheet" href="login/login.css"/>
+    <link rel="stylesheet" href="signup/signup.css"/>
+    <link rel="stylesheet" href="my-page/my-page.css"/>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
