--- a/app/signup/signup.template.html
+++ b/app/signup/signup.template.html
@@ -1,47 +1,72 @@
-<form ng-submit="submitSignupForm()">
-    <ul>
-        <li>
-            <label for="firstName"><b>First name</b></label>
-            <input type="text" placeholder="Enter first name" id="firstName" ng-model="firstName" required>
-        </li>
-        <li>
-            <label for="lastName"><b>Last name</b></label>
-            <input type="text" placeholder="Enter last name" id="lastName" ng-model="lastName" required>
-        </li>
-        <li>
-            <label for="userName"><b>Username</b></label>
-            <input type="text" placeholder="Enter user name" id="userName" ng-model="userName" required>
-        </li>
-        <li>
-            <label for="email"><b>Email</b></label>
-            <input type="email" placeholder="Enter email" id="email" ng-model="email" required>
-        </li>
-        <li>
-            <label for="phone"><b>Phone</b></label>
-            <input type="text" placeholder="Enter phone" id="phone" ng-model="phone" required>
-        </li>
-        <li>
-            <label for="password"><b>Password</b></label>
-            <input type="password" placeholder="Enter password" id="password" ng-model="password" required>
-        </li>
-        <li>
-            <label for="address"><b>Address</b></label>
-            <input type="text" placeholder="Enter address" id="address" ng-model="address">
-        </li>
-        <li>
-            <label for="city"><b>City</b></label>
-            <input type="number" placeholder="Enter city id" id="city" ng-model="cityId" required>
-        </li>
-        <li>
-            <label for="birthdate"><b>Birth date</b></label>
-            <input type="text" placeholder="Enter date" id="birthdate" ng-model="birthDate">
-        </li>
-        <li>
-            <label for="category"><b>Category</b></label>
-            <input type="number" placeholder="Enter category" id="category" ng-model="userCategoryId" required>
-        </li>
-        <li>
-            <button type="submit">Register</button>
-        </li>
-    </ul>
-</form>
+<div id="signup_page">
+    <form ng-submit="submitSignupForm()" id="signup_form">
+        <ul id="signup_ul">
+            <li>
+                <div class="field_header">First name</div>
+                <label for="firstName">
+                    <input type="text" placeholder="Enter first name" id="firstName" ng-model="firstName" required>
+                </label>
+            </li>
+            <li>
+                <div class="field_header">Last name</div>
+                <label for="lastName">
+                    <input type="text" placeholder="Enter last name" id="lastName" ng-model="lastName" required>
+                </label>
+            </li>
+            <li>
+                <div class="field_header">Username</div>
+                <label for="userName">
+                    <input type="text" placeholder="Enter user name" id="userName" ng-model="userName" required>
+                </label>
+            </li>
+            <li>
+                <div class="field_header">Email</div>
+                <label for="email">
+                    <input type="email" placeholder="Enter email" id="email" ng-model="email" required>
+                </label>
+            </li>
+            <li>
+                <div class="field_header">Phone</div>
+                <label for="phone">
+                    <input type="text" placeholder="Enter phone" id="phone" ng-model="phone" required>
+                </label>
+            </li>
+            <li>
+                <div class="field_header">Password</div>
+                <label for="password">
+                    <input type="password" placeholder="Enter password" id="password" ng-model="password" required>
+                </label>
+            </li>
+            <li>
+                <div class="field_header">Address</div>
+                <label for="address">
+                    <input type="text" placeholder="Enter address" id="address" ng-model="address">
+                </label>
+            </li>
+            <li>
+                <div class="field_header">City</div>
+                <label for="city">
+                    <input type="number" placeholder="Enter city id" id="city" ng-model="cityId" required>
+                </label>
+            </li>
+            <li>
+                <div class="field_header">Birthdate</div>
+                <label for="birthdate">
+                    <input type="text" placeholder="Enter date" id="birthdate" ng-model="birthDate">
+                </label>
+            </li>
+            <li>
+                <div class="field_header">User category</div>
+                <label for="category">
+                    <input type="number" placeholder="Enter user category" id="category" ng-model="userCategoryId" required>
+                </label>
+            </li>
+            <li>
+                <button type="submit" id="signup_button">Register</button>
+            </li>
+            <li>
+                <a href="#!/login" id="login">Log in</a>
+            </li>
+        </ul>
+    </form>
+</div>
