fixed tickets choice, created orders frontend & etc

--- a/app/cinema-detail/cinema-detail.template.html
+++ b/app/cinema-detail/cinema-detail.template.html
@@ -7,33 +7,37 @@
         </li>
         <li>
             <p>
-                <img ng-src="https://cdn-icons-png.flaticon.com/512/2942/2942076.png" alt="City" width="20px"
+                <img ng-src="https://cdn-icons-png.flaticon.com/512/1068/1068530.png" alt="City" width="20px"
                      height="20px"/>
                 {{$ctrl.cinema.city.name}}
             </p>
         </li>
         <li>
             <p>
-                <img ng-src="https://cdn-icons-png.flaticon.com/512/546/546394.png" alt="Email" width="20px"
+                <img ng-src="https://cdn-icons-png.flaticon.com/512/726/726623.png" alt="Email" width="20px"
                      height="20px"/>
                 {{$ctrl.cinema.email}}
             </p>
         </li>
         <li>
             <p>
-                <img ng-src="https://cdn-icons-png.flaticon.com/512/597/597177.png" alt="phone" width="20px"
+                <img ng-src="https://cdn-icons-png.flaticon.com/512/552/552489.png" alt="phone" width="20px"
                      height="20px">
                 {{$ctrl.cinema.phone}}
             </p>
         </li>
     </ul>
 
-    <p class="search">
-        Search:
-        <label>
-            <input ng-model="$ctrl.query"/>
-        </label>
-    </p>
+    <ul class="search">
+        <li>
+            Search:
+        </li>
+        <li>
+            <label>
+                <input ng-model="$ctrl.query"/>
+            </label>
+        </li>
+    </ul>
     <ul class="cinema-events">
         <!-- -->
         <li ng-repeat="movieEvents in $ctrl.eventMatrix | filter:$ctrl.query"
@@ -46,7 +50,7 @@
             </div>
             <ul class="cinema-movie-stats">
                 <li>
-                    <h4>{{movieEvents[0][0].movie.name}}</h4>
+                    <div class="cinema-movie-name">{{movieEvents[0][0].movie.name}}</div>
                 </li>
                 <li><p>
                     <img ng-src="https://cdn-icons-png.flaticon.com/512/1828/1828884.png" alt="Rating"
@@ -61,10 +65,15 @@
             <ul class="cinema-movie-rooms">
                 <li ng-repeat="movieRoomEvents in movieEvents" class="cinema-movie-rooms-stats">
                     <p class="movie-room-number">ROOM {{movieRoomEvents[0].movieRoom.id}}</p>
-                    <p>{{movieRoomEvents[0].movieRoom.roomType.name}}</p>
+
+                    <p ng-class="{'highlight-premium': movieRoomEvents[0].movieRoom.roomType.name == 'PREMIUM'}">
+                        {{movieRoomEvents[0].movieRoom.roomType.name}}</p>
+
                     <ul class="cinema-movie-rooms-events">
                         <li ng-repeat="movieRoomEvent in movieRoomEvents" class="cinema-movie-with-events-event">
-                            <button ng-click="buyTicket(movieRoomEvent.id)">{{movieRoomEvent.startDateTime}}</button>
+                            <button ng-click="buyTicket(movieRoomEvent.id)">
+                                {{movieRoomEvent.startDateTime}}
+                            </button>
                         </li>
                     </ul>
                 </li>
