--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="login/login.css"/>
     <link rel="stylesheet" href="signup/signup.css"/>
     <link rel="stylesheet" href="my-page/my-page.css"/>
+    <link rel="stylesheet" href="my-orders/my-orders.css"/>
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
