--- a/app/menu/menu.template.html
+++ b/app/menu/menu.template.html
@@ -1,6 +1,6 @@
 <div class="header">
     <ul class="menu">
-        <li><a href="#!account">
+        <li><a href="#!me">
             <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="Login" class="login-icon">
         </a></li>
         <li><a href="#!movie-theaters">Theaters</a></li>
