--- a/app/my-page/my-page.template.html
+++ b/app/my-page/my-page.template.html
@@ -7,21 +7,21 @@
         </li>
         <li>
             <p>
-                <img ng-src="https://cdn-icons-png.flaticon.com/512/2942/2942076.png" alt="City" width="20px"
+                <img ng-src="https://cdn-icons-png.flaticon.com/512/1068/1068530.png" alt="City" width="20px"
                      height="20px"/>
                 {{$ctrl.info.city.name}}
             </p>
         </li>
         <li>
             <p>
-                <img ng-src="https://cdn-icons-png.flaticon.com/512/546/546394.png" alt="Email" width="20px"
+                <img ng-src="https://cdn-icons-png.flaticon.com/512/726/726623.png" alt="Email" width="20px"
                      height="20px"/>
                 {{$ctrl.info.email}}
             </p>
         </li>
         <li>
             <p>
-                <img ng-src="https://cdn-icons-png.flaticon.com/512/597/597177.png" alt="phone" width="20px"
+                <img ng-src="https://cdn-icons-png.flaticon.com/512/552/552489.png" alt="phone" width="20px"
                      height="20px">
                 {{$ctrl.info.phone}}
             </p>
@@ -105,6 +105,6 @@
         </li>
     </ul>
     <p>
-        <a href="#!orders/me">My Orders</a>
+        <a href="#!orders/me" class="my-orders-link">My Orders →</a>
     </p>
 </div>
