created ticket payment & print buttons, new modules with request urls to backend

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="signup/signup.css"/>
     <link rel="stylesheet" href="my-page/my-page.css"/>
     <link rel="stylesheet" href="my-orders/my-orders.css"/>
+    <link rel="stylesheet" href="ticket-printer/ticket-printer.css">
+    <link rel="stylesheet" href="ticket-picker/ticket-picker.css">
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
@@ -33,6 +35,12 @@
     <script src="core/movie/movie.service.js"></script>
     <script src="core/user/user.module.js"></script>
     <script src="core/user/user.service.js"></script>
+    <script src="core/event/event.module.js"></script>
+    <script src="core/event/event.service.js"></script>
+    <script src="core/order/order.module.js"></script>
+    <script src="core/order/order.service.js"></script>
+    <script src="core/ticket/ticket.module.js"></script>
+    <script src="core/ticket/ticket.service.js"></script>
 
     <script src="cinema-list/cinema-list.module.js"></script>
     <script src="cinema-list/cinema-list.component.js"></script>
@@ -62,6 +70,9 @@
 
     <script src="ticket-picker/ticket-picker.module.js"></script>
     <script src="ticket-picker/ticket-picker.component.js"></script>
+
+    <script src="ticket-printer/ticket-printer.module.js"></script>
+    <script src="ticket-printer/ticket-printer.component.js"></script>
 </head>
 <body>
 
