--- a/app/my-orders/my-orders.template.html
+++ b/app/my-orders/my-orders.template.html
@@ -46,12 +46,14 @@
                 <li class="cinema">{{order.event.movieRoom.cinemaName}}</li>
                 <li class="room">{{order.event.movieRoom.id}}</li>
                 <li class="actions">
-                    <button ng-click="$ctrl.printTickets(order.id)" class="print-button">
+                    <button ng-if="$ctrl.selectedOrderStatus != 'CREATED'"
+                            ng-click="$ctrl.printTickets(order.id)"
+                            class="print-button">
                         <img src="https://cdn-icons-png.flaticon.com/512/839/839184.png" width="20px" height="20px"
                              alt="Print">
                     </button>
                     <button ng-click="$ctrl.orderPayment(order.id)"
-                            ng-class="{'created-order-pay-button': $ctrl.selectedOrderStatus == 'CREATED'}"
+                            ng-if="$ctrl.selectedOrderStatus == 'CREATED'"
                             class="pay-button">
                         Pay
                     </button>
