added logout logic

--- a/app/my-page/my-page.template.html
+++ b/app/my-page/my-page.template.html
@@ -107,4 +107,7 @@
     <p>
         <a href="#!orders/me" class="my-orders-link">My Orders →</a>
     </p>
+    <p>
+        <button class="logout" ng-click="logout()">Log out</button>
+    </p>
 </div>
