added edit home page logic

--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="my-orders/my-orders.css"/>
     <link rel="stylesheet" href="ticket-printer/ticket-printer.css">
     <link rel="stylesheet" href="ticket-picker/ticket-picker.css">
+    <link rel="stylesheet" href="edit-page/edit-page.css">
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
@@ -73,6 +74,9 @@
 
     <script src="ticket-printer/ticket-printer.module.js"></script>
     <script src="ticket-printer/ticket-printer.component.js"></script>
+
+    <script src="edit-page/edit-page.module.js"></script>
+    <script src="edit-page/edit-page.component.js"></script>
 </head>
 <body>
 
