--- a/app/my-page/my-page.template.html
+++ b/app/my-page/my-page.template.html
@@ -26,6 +26,9 @@
                 {{$ctrl.info.phone}}
             </p>
         </li>
+        <li>
+            <a href="#!/me/edit">Edit page</a>
+        </li>
     </ul>
     <p id="reg-date">
         Member from: {{$ctrl.info.registrationDateTime}}
