added admin env + all users page for admin

--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="ticket-printer/ticket-printer.css">
     <link rel="stylesheet" href="ticket-picker/ticket-picker.css">
     <link rel="stylesheet" href="edit-page/edit-page.css">
+    <link rel="stylesheet" href="admin-stats/user/user.css">
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
@@ -42,6 +43,8 @@
     <script src="core/order/order.service.js"></script>
     <script src="core/ticket/ticket.module.js"></script>
     <script src="core/ticket/ticket.service.js"></script>
+    <script src="core/admin/admin.module.js"></script>
+    <script src="core/admin/admin.service.js"></script>
 
     <script src="cinema-list/cinema-list.module.js"></script>
     <script src="cinema-list/cinema-list.component.js"></script>
@@ -77,6 +80,10 @@
 
     <script src="edit-page/edit-page.module.js"></script>
     <script src="edit-page/edit-page.component.js"></script>
+
+    <script src="admin-stats/admin-stats.module.js"></script>
+    <script src="admin-stats/user/user.module.js"></script>
+    <script src="admin-stats/user/user.component.js"></script>
 </head>
 <body>
 
