admin env: edit users pages

--- a/app/admin-stats/user/user.template.html
+++ b/app/admin-stats/user/user.template.html
@@ -64,7 +64,10 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <a href="#!/me/edit">Edit page</a>
+                                    <a href="#!/admin/users/edit/{{details.id}}">Edit page</a>
+                                </li>
+                                <li>
+                                    <button ng-click="deleteUser(details.id)" class="delete-user-button">Delete page</button>
                                 </li>
                             </ul>
                         </li>
