--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="ticket-picker/ticket-picker.css">
     <link rel="stylesheet" href="edit-page/edit-page.css">
     <link rel="stylesheet" href="admin-stats/user/user.css">
+    <link rel="stylesheet" href="admin-stats/user-edit/user-edit.css">
 
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
@@ -84,6 +85,8 @@
     <script src="admin-stats/admin-stats.module.js"></script>
     <script src="admin-stats/user/user.module.js"></script>
     <script src="admin-stats/user/user.component.js"></script>
+    <script src="admin-stats/user-edit/user-edit.module.js"></script>
+    <script src="admin-stats/user-edit/user-edit.component.js"></script>
 </head>
 <body>
 
