admin env: view user orders + tickets

--- a/app/admin-stats/user/user.template.html
+++ b/app/admin-stats/user/user.template.html
@@ -69,6 +69,9 @@
                                 <li>
                                     <button ng-click="deleteUser(details.id)" class="delete-user-button">Delete page</button>
                                 </li>
+                                <li>
+                                    <a href="#!/admin/orders/users/{{details.id}}">View orders</a>
+                                </li>
                             </ul>
                         </li>
                         <li>
