--- a/app/ticket-printer/ticket-printer.template.html
+++ b/app/ticket-printer/ticket-printer.template.html
@@ -31,7 +31,7 @@
                 <li>ROW: {{ticket.seat.rowNumber}}</li>
                 <li>PLACE: {{ticket.seat.placeNumber}}</li>
             </ul>
-            <ul class="remove-ticket-button" ng-if="ticket.order.orderStatus == 'ACTIVE'">
+            <ul class="remove-ticket-button" ng-if="ticket.order.orderStatus == 'CREATED'">
                 <li>
                     <button ng-click="removeTicket(ticket.id)">
                         Remove
